workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/GarantiaContratanteOrcamento__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do contratante do orçamento</description>
    <label>Garantia do contratante do orçamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do contratante do orçamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>