workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/ContratanteOrcamento__c.field-meta.xml
<CustomField>
    <fullName>ContratanteOrcamento__c</fullName>
    <label>Contratante do orçamento</label>
    <referenceTo>ContratanteOrcamento__c</referenceTo>
    <relationshipLabel>Garantias do contratante do orçamento</relationshipLabel>
    <relationshipName>GarantiasContratanteOrcamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>