workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/PercentualIndenizacaoEspecial__c.field-meta.xml
<CustomField>
    <fullName>PercentualIndenizacaoEspecial__c</fullName>
    <label>Percentual indenizacao especial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>