workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/PremioPuroDesconto__c.field-meta.xml
<CustomField>
    <fullName>PremioPuroDesconto__c</fullName>
    <label>Prêmio puro desconto R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>