workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/TaxaMensal__c.field-meta.xml
<CustomField>
    <fullName>TaxaMensal__c</fullName>
    <label>Taxa mensal</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>