workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/TaxaPuroInterno__c.field-meta.xml
<CustomField>
    <fullName>TaxaPuroInterno__c</fullName>
    <label>Taxa puro interno</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>