workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/TaxaPuroResseguro__c.field-meta.xml
<CustomField>
    <fullName>TaxaPuroResseguro__c</fullName>
    <label>Taxa puro resseguro</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>