workspace-sf/force-app/main/default/objects/GarantiaContratanteOrcamento__c/fields/ValorCotacao__c.field-meta.xml
<CustomField>
    <fullName>ValorCotacao__c</fullName>
    <label>Valor da cotação R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>